logs/go_to_poi/build.make.006.log.stderr
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp: In function ‘void poi_callback(const ConstPtr&)’:
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:16:24: error: invalid type argument of unary ‘*’ (have ‘std::vector<geometry_msgs::Point_<std::allocator<void> >, std::allocator<geometry_msgs::Point_<std::allocator<void> > > >::size_type {aka long unsigned int}’)
         *msg->poi.size();
                        ^
make[2]: *** [CMakeFiles/go_to_poi.dir/src/go_to_poi.cpp.o] Error 1
make[1]: *** [CMakeFiles/go_to_poi.dir/all] Error 2
make: *** [all] Error 2
